--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-shade-plugin.version>3.2.3</maven-shade-plugin.version>
 
-        <beam.version>2.22.0</beam.version>
+        <beam.version>2.23.0-SNAPSHOT</beam.version>
         <flink.version>1.10.1</flink.version>
 
         <picocli.version>4.3.0</picocli.version>
@@ -60,15 +60,36 @@
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-sdks-java-core</artifactId>
-            <version>${beam.version}</version>
+
+                        <version>${beam.version}</version>
+<!--            <version>2.25.0-SNAPSHOT</version>-->
         </dependency>
 
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-runners-flink-1.10</artifactId>
+
             <version>${beam.version}</version>
             <!--            <scope>runtime</scope>-->
         </dependency>
+
+
+<!--        <dependency>-->
+<!--            <groupId>org.apache.beam</groupId>-->
+<!--            <artifactId>beam-runners-flink-1.10</artifactId>-->
+<!--            <version>2.25.0-SNAPSHOT</version>-->
+<!--            <scope>system</scope>-->
+<!--            &lt;!&ndash; <systemPath>/home/rhermes/madsci/thesis/tools/beam/runners/flink/1.11/build/libs/beam-runners-flink-1.11-2.25.0-SNAPSHOT.jar</systemPath> &ndash;&gt;-->
+<!--            <systemPath>/home/rhermes/madsci/thesis/tools/beam/runners/flink/1.10/build/libs/beam-runners-flink-1.10-2.25.0-SNAPSHOT.jar</systemPath>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
